[package]
name = "linked_hash_set"
version = "0.1.5"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2021"
description = "HashSet with insertion ordering"
repository = "https://github.com/alexheretic/linked-hash-set"
keywords = ["data-structures"]
license = "Apache-2.0"
readme="README.md"

[dependencies]
linked-hash-map = "0.5.6"
serde = { version = "1", optional = true }

[dev-dependencies]
serde_test = "1"
